Se agrega metodo update para actualizar estadisticas
